--- a/hero.html
+++ b/hero.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DotaGuide</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="app.js"></script>
+    <script defer src="hero.js"></script>
   </head>
   <body>
     <div class="banner">
@@ -26,7 +26,7 @@
       </header>
 
       <!-- Hero List -->
-      <div class="hero_name"></div>
+      <main></main>
     </div>
   </body>
 </html>
