--- a/hero.html
+++ b/hero.html
@@ -19,7 +19,7 @@
         <div class="navbar">
           <ul class="nav_links">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./hero.html">Heroes</a></li>
+            <li><a href="./hero.html">Items</a></li>
             <li><a href="./.html">Patreon</a></li>
           </ul>
         </div>
