oliver : säker 'Check'

--- a/hero.html
+++ b/hero.html
@@ -20,13 +20,20 @@
           <ul class="nav_links">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./items.html">Items</a></li>
-            <li><a href="./status.html">Status</a></li>
+            <li><a href="./stats.html">Stats</a></li>
           </ul>
         </div>
       </header>
 
       <!-- Hero List -->
-      <main></main>
+      <main>
+        <!--
+        <a href="#" class="column"
+          ><span class="text"><h1>Ascent</h1></span>
+          <img src="" class="hero_img" alt="PNG of hero"
+        /></a>
+        -->
+      </main>
     </div>
   </body>
 </html>
