--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <ul class="nav_links">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./items.html">Items</a></li>
-            <li><a href="./status.html">Status</a></li>
+            <li><a href="./stats.html">Stats</a></li>
           </ul>
         </div>
       </header>
