--- a/stats.html
+++ b/stats.html
@@ -9,8 +9,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="stats_header">
+      <div class="logo">
+        <img src="icons8-dota-2.svg" alt="Dota2 logo" />
+      </div>
+
+      <div class="navbar">
+        <ul class="nav_links">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./items.html">Items</a></li>
+          <li><a href="./stats.html">Stats</a></li>
+        </ul>
+      </div>
+    </header>
     <div class="bg">
-      <div class="main">
+      <div class="stats_main">
         <div class="numberofplayers">
           <p>Number Of Players</p>
         </div>
@@ -23,7 +36,7 @@
         <div class="numberofmatcheslasthour">
           <p>Number Of Matches Last Hour</p>
         </div>
-        <div class="numberofmatches">
+        <div class="numberofmatcheslastday">
           <p>Number Of Matches Last Day</p>
         </div>
       </div>
