Added window icons

--- a/stats.html
+++ b/stats.html
@@ -7,6 +7,8 @@
     <title>Stats</title>
     <script defer src="stats.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="stats from a dota api" />
+    <link rel="icon" href="./icons8-dota-2.svg" />
   </head>
   <body>
     <header class="stats_header">
