--- a/hero.html
+++ b/hero.html
@@ -7,6 +7,7 @@
     <title>DotaGuide</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="hero.js"></script>
+    <link rel="icon" href="./icons8-dota-2.svg" />
   </head>
   <body>
     <div class="banner">
